[package]
name = "soup_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
lazy_static = "1.4.0"
once_cell = "1.17.0"
rand = "0.8.5"
reqwest = "0.11.14"
rust_decimal = "1.28.0"
scraper = "0.14.0"
sqlx = { version = "0.6.2", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.25.0", features = ["full"] }
